# rag-ai-assistant

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  main.py
app/api/routes/: documents.py  query.py
app/core/: embeddings.py  generator.py  rag_pipeline.py  retriever.py
app/models/: schemas.py
app/services/: document_processor.py  vector_store.py
app/utils/: helpers.py  logger.py
data/: eval_dataset.json
data/sample_docs/: README.txt
docs/: architecture.md
scripts/: evaluate_rag.py  ingest_documents.py
tests/: conftest.py  test_api.py  test_rag_pipeline.py
